--- a/modalBox/modalBox.html
+++ b/modalBox/modalBox.html
@@ -25,9 +25,8 @@
       </div>
       <div class="modal-content">
         <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic est
-          alias autem voluptatem magni a quaerat, ullam, id odit blanditiis
-          nobis? Dolor laborum officiis quis ab sequi illum atque sint.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure,
+          ratione.
         </p>
       </div>
       <div class="modal-buttons">
